--- a/idol_story/movie_play/466/2.html
+++ b/idol_story/movie_play/466/2.html
@@ -15,7 +15,7 @@
     <script>
         $(document).ready(function() {
             if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/idol_story/generator_cjs/462/1');
+                newrelic.setPageViewName('/idolmaster/index.php/idol_story/generator_cjs/466/2/idol_story--index--2--3---prev----1?keyword=?keyword=---keyword----/1');
             }
         });
     </script>
@@ -62,7 +62,7 @@
     <script type='text/javascript' src='../../../js/createjs.min.js'></script>
     <script type='text/javascript' src='../../../js/app_sound.js'></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/story_generator_n1.js' crossorigin="anonymous"></script>
-    <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_chord.js' crossorigin="anonymous"></script>
+    <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_flower_yellow.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_flower_red.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_question.js' crossorigin="anonymous"></script>
     <script type='text/javascript'>
@@ -107,13 +107,11 @@
         window.file_name = "story_generator_n1"; // createjs の本体ファイルを定義
         window.dir_name = "../../../image_sp/cjs/genechara/";
         window.voice_manifest = {
-            'scene1': '../../../sound/9901089/scene1.mp3',
-            'scene2': '../../../sound/9901089/scene2.mp3',
-            'scene3': '../../../sound/9901089/scene3.mp3',
-            'scene4': '../../../sound/9901089/scene4.mp3',
-            'scene5': '../../../sound/9901089/scene5.mp3',
-            'scene6': '../../../sound/9901089/scene6.mp3',
-            'scene7': '../../../sound/9901089/scene7.mp3',
+            'scene1': '../../../sound/9901092/scene1.mp3',
+            'scene2': '../../../sound/9901092/scene2.mp3',
+            'scene3': '../../../sound/9901092/scene3.mp3',
+            'scene4': '../../../sound/9901092/scene4.mp3',
+            'scene5': '../../../sound/9901092/scene5.mp3',
         };
         window._wrap_flag = 0;
         window._ua = window.navigator.userAgent;
@@ -125,135 +123,99 @@
         window.im_cjs = {
             "scene_list": [{
                 "id": "1",
-                "story_id": "173804",
-                "character_id": "10189",
+                "story_id": "173812",
+                "character_id": "2468501",
                 "cname": "",
                 "height_diff": "",
-                "face": "3",
+                "face": "1",
                 "position": "C",
-                "movement": "in_R",
-                "chara_effect": "",
+                "movement": "in_float",
+                "chara_effect": "flower_yellow",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
-                "bgimg": "173801",
-                "message": "……っ! ﾌﾟﾛﾃﾞｭｰｻｰさん､こちら\nです……｡すみません……走る\nことは､未だ慣れず……見苦し\nいところをお見せしました｡",
+                "bgimg": "173803",
+                "message": "顔を上げると……そこには､美\nしい景色が広がっていました｡\n多くの書……眩い星空……そし\nて､ﾌｧﾝの方々の真摯な瞳｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "2",
-                "story_id": "173804",
-                "character_id": "10189",
+                "story_id": "173812",
+                "character_id": "2468501",
                 "cname": "",
                 "height_diff": "",
-                "face": "2",
+                "face": "6",
                 "position": "C",
-                "movement": "swing",
-                "chara_effect": "chord",
+                "movement": "nod",
+                "chara_effect": "",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……もうすぐ､ﾐｭｰｼﾞｱﾑが完成し\nます｡私たちが綴った､ｱｲﾄﾞﾙと\nいう物語を……新たな形で､ﾌｧﾝ\nの方々にお見せできますね｡",
+                "message": "全てが､私の愛するものばかり\n……ｱｲﾄﾞﾙになり､戸惑いながら\nも進む中で見つけた……大きな\n喜びでした｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "3",
-                "story_id": "173804",
-                "character_id": "10189",
+                "story_id": "173812",
+                "character_id": "2468501",
                 "cname": "",
                 "height_diff": "",
-                "face": "1",
+                "face": "4",
                 "position": "C",
-                "movement": "nod2",
+                "movement": "question_left2",
                 "chara_effect": "",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……どの物語も､貴方がいたか\nら､創られたものです｡……だか\nらこそ､ﾌﾟﾛﾃﾞｭｰｻｰさんに完成を\n見届けてほしいと思い……",
+                "message": "しかし……何故でしょう｡もう､\n顔を上げただけでは､満足でき\nない私がいます｡目の前の全て\nには､数多の物語がある……",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "4",
-                "story_id": "173804",
-                "character_id": "10189",
+                "story_id": "173812",
+                "character_id": "2468501",
                 "cname": "",
                 "height_diff": "",
-                "face": "6",
+                "face": "3",
                 "position": "C",
-                "movement": "question_left2",
+                "movement": "nod2",
                 "chara_effect": "",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "気づけば､貴方の手を取り､駆け\n出していました……｡お忙しい\n中､すみません｡はい､ﾒﾓﾘｱﾙﾌﾞｯｸ\nの展示は､あちらに……｡",
+                "message": "私はそれに手を伸ばし､触れた\nいと……私を支えてくれる貴方\nたちのことを､もっと知りたい\nと願いました｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }, {
                 "id": "5",
-                "story_id": "173804",
-                "character_id": "10189",
-                "cname": "",
-                "height_diff": "",
-                "face": "1",
-                "position": "C",
-                "movement": "nod2",
-                "chara_effect": "",
-                "effect_direction": "",
-                "a_fade": "",
-                "": "",
-                "bgimg": "",
-                "message": "……先ほど､私は見届けてほし\nいと言いました｡ですが……本\n当は､私が､共に見届けたかった\nだけなのかもしれません｡",
-                "timing": "",
-                "auto": "1",
-                "sound_effect": ""
-            }, {
-                "id": "6",
-                "story_id": "173804",
-                "character_id": "10189",
+                "story_id": "173812",
+                "character_id": "2468501",
                 "cname": "",
                 "height_diff": "",
                 "face": "5",
                 "position": "C",
-                "movement": "question_left2",
-                "chara_effect": "",
-                "effect_direction": "",
-                "a_fade": "",
-                "": "",
-                "bgimg": "",
-                "message": "ﾌﾟﾛﾃﾞｭｰｻｰさんと胸の高鳴りを\n共有し……そして､見たかった\nんです｡完成した瞬間の……貴\n方の､華やいだ笑顔を｡",
-                "timing": "",
-                "auto": "1",
-                "sound_effect": ""
-            }, {
-                "id": "7",
-                "story_id": "173804",
-                "character_id": "10189",
-                "cname": "",
-                "height_diff": "",
-                "face": "2",
-                "position": "C",
-                "movement": "nod2",
+                "movement": "swing",
                 "chara_effect": "flower_red",
                 "effect_direction": "",
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "お付き合いさせてしまい､申し\n訳……いえ､これからも､お付き\n合いいただけますか? 私の……\n私たちの､胸躍る物語に｡",
+                "message": "聞かせてください……皆さんの\n物語を､皆さんの声で｡このｽﾃｰｼ\nﾞは……私と皆さんで綴る､新た\nな旅立ちの序章です｡",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }],
-            "bg_list": [173801],
-            "effect_list": ["chord", "flower_red", "question"],
+            "bg_list": [173803],
+            "effect_list": ["flower_yellow", "flower_red", "question"],
             "character_list": {
-                "10189": {
+                "2468501": {
                     "id": 1,
                     "hash_id": "",
                     "name": "文香",
@@ -262,7 +224,7 @@
                     "other_flg": "1"
                 }
             },
-            "title": "設営中のミュージアム",
+            "title": "LIVEイベント",
             "story_type": "0",
             "all_skip": "0",
             "logo_bg": ""
@@ -273,8 +235,6 @@
         4
         5
         6
-        7
-        8
         window.chara_replace_images = {};
         // 一旦すべてのキャラ画像をダミーに差し替え
         for (i = 1; i <= 20; i++) {
@@ -283,20 +243,18 @@
             }
         }
         // 必要なキャラ画像を追加
-        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10189.png';
-        window.chara_replace_images['c1_face3'] = '../../../image_sp/cjs/chara/other/10189_3.png';
-        window.chara_replace_images['c1_face2'] = '../../../image_sp/cjs/chara/other/10189_2.png';
-        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10189.png';
-        window.chara_replace_images['c1_face6'] = '../../../image_sp/cjs/chara/other/10189_6.png';
-        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/10189.png';
-        window.chara_replace_images['c1_face5'] = '../../../image_sp/cjs/chara/other/10189_5.png';
-        window.chara_replace_images['c1_face2'] = '../../../image_sp/cjs/chara/other/10189_2.png';
-        window.chara_replace_images['c1_b'] = '../../../image_sp/cjs/chara/other/10189_b.png';
+        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/2468501.png';
+        window.chara_replace_images['c1_face1'] = '../../../image_sp/cjs/chara/other/2468501.png';
+        window.chara_replace_images['c1_face6'] = '../../../image_sp/cjs/chara/other/2468501_6.png';
+        window.chara_replace_images['c1_face4'] = '../../../image_sp/cjs/chara/other/2468501_4.png';
+        window.chara_replace_images['c1_face3'] = '../../../image_sp/cjs/chara/other/2468501_3.png';
+        window.chara_replace_images['c1_face5'] = '../../../image_sp/cjs/chara/other/2468501_5.png';
+        window.chara_replace_images['c1_b'] = '../../../image_sp/cjs/chara/other/2468501_b.png';
         window.im_cjs.bg_frame_info = {
-            '173801': 0,
+            '173803': 0,
         };
         window.bg_replace_images = {};
-        window.bg_replace_images['bg1'] = '173801';
+        window.bg_replace_images['bg1'] = '173803';
         window.bg_replace_images['bg2'] = '_nobg';
         window.bg_replace_images['bg3'] = '_nobg';
         window.bg_replace_images['bg4'] = '_nobg';
@@ -308,22 +266,22 @@
         window.bg_replace_images['bg10'] = '_nobg';
         window.op_bg_replace_images = {};
         window.im_cjs.effect_frame_info = {
-            'chord': 0,
+            'flower_yellow': 0,
             'flower_red': 1,
             'question': 2,
         };
         window.im_cjs.chara_frame_info = {
-            "10189": {
+            "2468501": {
                 "id": 1,
                 "hash_id": "",
                 "name": "文香",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
-                "face": ["1", "3", "2", "1", "6", "1", "5", "2"]
+                "face": ["1", "1", "6", "4", "3", "5"]
             }
         };
-        window.im_cjs.title_name = '設営中のミュージアム' || 'no_title';
+        window.im_cjs.title_name = 'LIVEイベント' || 'no_title';
         window.im_cjs.event_type = '0' || 0;
         window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/fumika.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
@@ -348,7 +306,7 @@
                 var comp = AdobeAn.getComposition(window.file_name);
                 lib = comp.getLibrary();
                 var comp_eff_supporter = [];
-                var effect_list = ["chord", "flower_red", "question"];
+                var effect_list = ["flower_yellow", "flower_red", "question"];
                 for (var n = 0, len = _effect_cnt; n < len; n++) {
                     comp_eff_supporter[n] = AdobeAn.getComposition('eff_' + effect_list[n]);
                     if (comp_eff_supporter[n]) {
