--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -14,7 +14,7 @@
         (function() {
             window.console.log = function() {};
         })();
-    </script>
+    </script>1 
     <script type="text/javascript">
         if (window.localStorage) {
             var displaySet = localStorage.getItem('DisplayPositionSet');
