--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3762,20 +3762,20 @@ kg
                         "comments_love_max": "本場英国で紅茶を学ぶのもいいですわね…｡OOちゃまに美味しいお茶を淹れるためですもの｡努力は当然ですわ♪"
                     },
                     "voice": {
-                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/idolcomment.mp3",
-                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/my_1.mp3",
-                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/my_2.mp3",
-                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/my_3.mp3",
-                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/my_4.mp3",
-                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/my_max.mp3",
-                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_1.mp3",
-                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_2.mp3",
-                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_3.mp3",
-                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_4.mp3",
-                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_max.mp3",
-                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/work_love_up.mp3",
-                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/live.mp3",
-                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1562202/love_max.mp3"
+                        "comment": "../../sound/1562202/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1562202/my_1.mp3",
+                        "comments_my_2": "../../sound/1562202/my_2.mp3",
+                        "comments_my_3": "../../sound/1562202/my_3.mp3",
+                        "comments_my_4": "../../sound/1562202/my_4.mp3",
+                        "comments_my_max": "../../sound/1562202/my_max.mp3",
+                        "comments_work_1": "../../sound/1562202/work_1.mp3",
+                        "comments_work_2": "../../sound/1562202/work_2.mp3",
+                        "comments_work_3": "../../sound/1562202/work_3.mp3",
+                        "comments_work_4": "../../sound/1562202/work_4.mp3",
+                        "comments_work_max": "../../sound/1562202/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1562202/work_love_up.mp3",
+                        "comments_live": "../../sound/1562202/live.mp3",
+                        "comments_love_max": "../../sound/1562202/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3841,20 +3841,20 @@ kg
                         "comments_love_max": "この小さな世界を守りたい､とふと思いましたの｡OOちゃまとふたり､手を取り合って､聖夜の奇跡を紡いで…"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/1468201/c3fdb2c811534f43f672e57ed6059c59.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/1468201/dfb1166a0ef298cf3bf0d1dc56b45e61.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/1468201/f7b70f63e8721b08c5a68d173ab93fc7.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/1468201/081d3e46e93f9c49c7a17a792ffec104.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/1468201/96ea7845323f75acd1b9d6a5dd790767.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/1468201/c0d9eaa74b631ede775c7307cac7c63f.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/1468201/f75b859e84dc32c23fb043f2a6478758.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/1468201/a585a977e8d93d04d8d5c89416e9422f.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/1468201/ae518456ae0603e11c9cecef84287a7a.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/1468201/5931f930fd37d5153c4e603eec768e91.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/1468201/82065a21455d95c5c69d7322472a15b0.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/1468201/6d0c403df7451a7cc6b5bf6570245dc5.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/1468201/13a1ca82ab1f63df7bf29af0b8c9545e.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/1468201/3b0cfc81b97b939620d995eef59d3a37.mp4"
+                        "comment": "../../sound/1468201/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1468201/my_1.mp3",
+                        "comments_my_2": "../../sound/1468201/my_2.mp3",
+                        "comments_my_3": "../../sound/1468201/my_3.mp3",
+                        "comments_my_4": "../../sound/1468201/my_4.mp3",
+                        "comments_my_max": "../../sound/1468201/my_max.mp3",
+                        "comments_work_1": "../../sound/1468201/work_1.mp3",
+                        "comments_work_2": "../../sound/1468201/work_2.mp3",
+                        "comments_work_3": "../../sound/1468201/work_3.mp3",
+                        "comments_work_4": "../../sound/1468201/work_4.mp3",
+                        "comments_work_max": "../../sound/1468201/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1468201/work_love_up.mp3",
+                        "comments_live": "../../sound/1468201/live.mp3",
+                        "comments_love_max": "../../sound/1468201/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3921,20 +3921,20 @@ kg
                         "comments_love_max": "いつも感じていますの｡傍で見守ってくれる､あたたかな眼差し｡OOちゃま…奇跡とは､きっと愛なのですわね"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/1568202/a85b6f952601fddd99db3e4a4d782418.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/1568202/3a1b5cdc16d513f296a8de09a94b71d6.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/1568202/8b5bf285ab23d4869eab30934e84e1ca.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/1568202/a68d370f251f2b9148d2e548e75b7979.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/1568202/7cb41e7211921418cd088a7a36bf889f.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/1568202/f6d8dc9dcc1bd446ac2c18bd478589ce.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/1568202/41bf1f231ba7d1090c067574ef762efc.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/1568202/4a8dfe0d1b468542f2dbed55e200407c.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/1568202/a79497999350ef5d940721d7f685d1ea.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/1568202/c8b50d9e2cce30e8139d77e7cab64dfd.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/1568202/1c6d9c3fe1ca568548158bcf9604f2ec.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/1568202/8eb1cd0838ee14400faf12b72861fe79.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/1568202/2122c3477be4f987fe4bcb160ed7ac54.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/1568202/270645dcc354da1358ccb62883c11627.mp4"
+                        "comment": "../../sound/1568202/idolcomment.mp3",
+                        "comments_my_1": "../../sound/1568202/my_1.mp3",
+                        "comments_my_2": "../../sound/1568202/my_2.mp3",
+                        "comments_my_3": "../../sound/1568202/my_3.mp3",
+                        "comments_my_4": "../../sound/1568202/my_4.mp3",
+                        "comments_my_max": "../../sound/1568202/my_max.mp3",
+                        "comments_work_1": "../../sound/1568202/work_1.mp3",
+                        "comments_work_2": "../../sound/1568202/work_2.mp3",
+                        "comments_work_3": "../../sound/1568202/work_3.mp3",
+                        "comments_work_4": "../../sound/1568202/work_4.mp3",
+                        "comments_work_max": "../../sound/1568202/work_max.mp3",
+                        "comments_work_love_up": "../../sound/1568202/work_love_up.mp3",
+                        "comments_live": "../../sound/1568202/live.mp3",
+                        "comments_love_max": "../../sound/1568202/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
