--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -2697,20 +2697,20 @@ kg
                         "comments_love_max": "一枚､また一枚､降り積もり…時が黄昏てゆく｡少女の刻も同じく､か｡ﾌﾌｯ､せいぜい生き急ごう､OO｡冬が､来る前に"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2442901/a9d6213cf4b29fc90be50e9d6e496229.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2442901/271d027cb4ca863f9ffdd0ef351ea427.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2442901/4699c77a6b6151c4cf4f8fccc63a54c9.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2442901/c111016b3bcf8e29bec1ea9eded47d50.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2442901/b31a78356efc79ff719bf9fb0512bf7f.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2442901/f0242b3046a5c5e4e473fa41d689d77b.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2442901/d0fcdd1c111bfbb6a94f6a4f4fc80c51.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2442901/dda7103ca68943942d310c528e65f279.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2442901/860f80f8bd2eab55e70d80267e660786.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2442901/f13650d64225b059047c42bf11eea918.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2442901/6eba27eab1a885ae87de945247121b46.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2442901/dff3fc6dfaa513f43e62c85800e0c049.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2442901/87f8f31e9f3a3cf074dac23e8e1d3cf6.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2442901/2adf53a2eb3690f82971e3890dc314a5.mp4"
+                        "comment": "../../sound/2442901/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2442901/my_1.mp3",
+                        "comments_my_2": "../../sound/2442901/my_2.mp3",
+                        "comments_my_3": "../../sound/2442901/my_3.mp3",
+                        "comments_my_4": "../../sound/2442901/my_4.mp3",
+                        "comments_my_max": "../../sound/2442901/my_max.mp3",
+                        "comments_work_1": "../../sound/2442901/work_1.mp3",
+                        "comments_work_2": "../../sound/2442901/work_2.mp3",
+                        "comments_work_3": "../../sound/2442901/work_3.mp3",
+                        "comments_work_4": "../../sound/2442901/work_4.mp3",
+                        "comments_work_max": "../../sound/2442901/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2442901/work_love_up.mp3",
+                        "comments_live": "../../sound/2442901/live.mp3",
+                        "comments_love_max": "../../sound/2442901/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2776,20 +2776,20 @@ kg
                         "comments_love_max": "自分の甘い幻想なんて､とうに食べてしまったよ｡むしゃむしゃとね｡けれど､OOと紡ぐ幻想に魅入られたようだ…"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2542902/87a27a35a00cbb9e9e8d22a4d4a78b72.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2542902/ab11bca9ba3190e144a682b508832a49.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2542902/2ed84b889ab87d2e7948ad0139049022.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2542902/948ebcafb525a7026916d7b7e515bc24.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2542902/0bf905bdaf0ad25cd8c7af2c9c575ed6.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2542902/1bfd90f2c10f84b29437796f6e54334b.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2542902/b715fa2d79786efd0f328eddffa48973.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2542902/fd473bf17231f1288269d1cccbdbc887.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2542902/ed1ca8f1b43ec9ac903cf3e3162e2113.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2542902/c9a8032d9f0e9c22aa679d680e2e8cdc.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2542902/88b0a2abf6cb2f8ed55c6ea0fdc06b22.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2542902/c021e4ad5770ca7465a4c3436c84af14.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2542902/63337adf8c6fdf67cba7d9d9bbca702e.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2542902/a1da41216a8e41a21de514cb16636cb8.mp4"
+                        "comment": "../../sound/2542902/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2542902/my_1.mp3",
+                        "comments_my_2": "../../sound/2542902/my_2.mp3",
+                        "comments_my_3": "../../sound/2542902/my_3.mp3",
+                        "comments_my_4": "../../sound/2542902/my_4.mp3",
+                        "comments_my_max": "../../sound/2542902/my_max.mp3",
+                        "comments_work_1": "../../sound/2542902/work_1.mp3",
+                        "comments_work_2": "../../sound/2542902/work_2.mp3",
+                        "comments_work_3": "../../sound/2542902/work_3.mp3",
+                        "comments_work_4": "../../sound/2542902/work_4.mp3",
+                        "comments_work_max": "../../sound/2542902/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2542902/work_love_up.mp3",
+                        "comments_live": "../../sound/2542902/live.mp3",
+                        "comments_love_max": "../../sound/2542902/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2855,20 +2855,20 @@ kg
                         "comments_love_max": "…痛いかい? 当然さ｡ﾎﾞｸはｷﾐの､ｷﾐはﾎﾞｸの､写し身だからね｡故に言い切れる｡ﾎﾞｸらの夢もｾｶｲも､二人で分かち合うﾓﾉなのだと"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2447801/f6bf0f6de706dc7e87de1ff0efa5e1c5.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2447801/491591a30fd2648345094160403e8aba.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2447801/5f248f74db3a49a4dfc51d9d6e60f308.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2447801/7c815b024e122c0fcfdd7cfa68477fd0.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2447801/715c032370b37b03111ae2fac3fb64ec.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2447801/3f544346bc6fe9ff7a224bdb9b29919d.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2447801/6334330974e1ac6ba113f112482e2986.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2447801/96bb56f97a55708c092b60a21f5f4967.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2447801/ca034a952f01e1ed60f7b65a9c4eeaa8.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2447801/dbf32b801970f4a0080ecbd6e08c8403.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2447801/ca5440616ab5dbff84d66512aedfcd6f.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2447801/21000a637d27f07c41af418f39a18b42.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2447801/111dc0d2c13df1946ee7bc79d62755b2.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2447801/c8e3cab83b994572099e1828c081cd82.mp4"
+                        "comment": "../../sound/2447801/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2447801/my_1.mp3",
+                        "comments_my_2": "../../sound/2447801/my_2.mp3",
+                        "comments_my_3": "../../sound/2447801/my_3.mp3",
+                        "comments_my_4": "../../sound/2447801/my_4.mp3",
+                        "comments_my_max": "../../sound/2447801/my_max.mp3",
+                        "comments_work_1": "../../sound/2447801/work_1.mp3",
+                        "comments_work_2": "../../sound/2447801/work_2.mp3",
+                        "comments_work_3": "../../sound/2447801/work_3.mp3",
+                        "comments_work_4": "../../sound/2447801/work_4.mp3",
+                        "comments_work_max": "../../sound/2447801/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2447801/work_love_up.mp3",
+                        "comments_live": "../../sound/2447801/live.mp3",
+                        "comments_love_max": "../../sound/2447801/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -2939,20 +2939,20 @@ kg
                         "comments_love_max": "空っぽのﾎﾞｸを､ｷﾐは満たしてくれた｡ﾎﾞｸの在り方を定義してくれた｡だから､ｷﾐに捧げよう｡心よりの感謝を…永遠の現在を"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2547802/0465a8c7690da6b5b109f42b80da93dc.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2547802/3e19dfa935637bd133c1f90599f14e15.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2547802/8a4df9ef9ebe9b677d9cfeea1c2dd094.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2547802/75a6047fc1a7c8c38b060e947c0329a4.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2547802/c01943b5ed628b644504597ba7dd0c26.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2547802/ca7d203598f3e4ef66df9f9c86c320df.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2547802/1bd5865e33e6efbcb8bae8a30f24c3a6.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2547802/052352c6eab83eaf163d862b8369530b.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2547802/e9d95a3b0c2819737eda8088dad175ef.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2547802/8e9a6895877afd3d71170da617a2ad35.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2547802/f1a3a6af41e9d7db30864be7dfed8593.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2547802/775c9efbf001b3f7408e4cd4ce9e054d.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2547802/e0dd15bcc45da73fed7099ca216213d9.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2547802/45fff0d7405e04ef8139d62297788b8c.mp4"
+                        "comment": "../../sound/2547802/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2547802/my_1.mp3",
+                        "comments_my_2": "../../sound/2547802/my_2.mp3",
+                        "comments_my_3": "../../sound/2547802/my_3.mp3",
+                        "comments_my_4": "../../sound/2547802/my_4.mp3",
+                        "comments_my_max": "../../sound/2547802/my_max.mp3",
+                        "comments_work_1": "../../sound/2547802/work_1.mp3",
+                        "comments_work_2": "../../sound/2547802/work_2.mp3",
+                        "comments_work_3": "../../sound/2547802/work_3.mp3",
+                        "comments_work_4": "../../sound/2547802/work_4.mp3",
+                        "comments_work_max": "../../sound/2547802/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2547802/work_love_up.mp3",
+                        "comments_live": "../../sound/2547802/live.mp3",
+                        "comments_love_max": "../../sound/2547802/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
